--- a/book.toml
+++ b/book.toml
@@ -1,6 +1,6 @@
 [book]
-authors = ["Alice Cecile"]
+authors = ["Matthew Martelle"]
 language = "en"
 multilingual = false
 src = "docs/src"
-title = "TEMPLATE"
+title = "Unfair Advantage"
