--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,10 @@
       "group": {
         "kind": "build",
         "isDefault": true
+      },
+      "presentation": {
+        "reveal": "silent",
+        "clear": true
       }
     }
   ]
