--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ members = ["./", "tools/ci"]
 
 [dependencies]
 # bevy = { version = "0.6", default-features = false}
-bevy = { version = "0.6", default-features = true, features = ["dynamic"]}
+bevy = { version = "0.6", default-features = true }
 heron = { version = "2.0.1", features = ["2d"] }
 bevy_kira_audio = "0.8.0"
 
